--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>puma-core</module>
         <module>common</module>
         <module>manage</module>
+        <module>instance</module>
     </modules>
 
     <description>puma-parent</description>
