--- a/manage/monitor/pom.xml
+++ b/manage/monitor/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>puma-common</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.dianping.puma</groupId>
+            <artifactId>puma-instance</artifactId>
+        </dependency>
+
         <!-- log-->
         <dependency>
             <groupId>log4j</groupId>
