--- a/manage/reactor/pom.xml
+++ b/manage/reactor/pom.xml
@@ -10,8 +10,9 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>puma-manage-core</artifactId>
-    <name>puma-manage-core</name>
+    <artifactId>puma-manage</artifactId>
+    <version>2.0.1-SNAPSHOT</version>
+    <name>puma-manage-reactor</name>
     <packaging>jar</packaging>
 
     <dependencies>
@@ -20,6 +21,16 @@
         <dependency>
             <groupId>com.dianping.puma</groupId>
             <artifactId>puma-common</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.dianping.puma</groupId>
+            <artifactId>puma-instance</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.dianping.puma</groupId>
+            <artifactId>puma-manage-core</artifactId>
         </dependency>
 
         <!-- log-->
