--- a/manage/record/pom.xml
+++ b/manage/record/pom.xml
@@ -10,8 +10,8 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>puma-manage-core</artifactId>
-    <name>puma-manage-core</name>
+    <artifactId>puma-manage-record</artifactId>
+    <name>puma-manage-record</name>
     <packaging>jar</packaging>
 
     <dependencies>
@@ -20,6 +20,11 @@
         <dependency>
             <groupId>com.dianping.puma</groupId>
             <artifactId>puma-common</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.dianping.puma</groupId>
+            <artifactId>puma-instance</artifactId>
         </dependency>
 
         <!-- log-->
