--- a/instance/core/pom.xml
+++ b/instance/core/pom.xml
@@ -10,8 +10,7 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>puma-instance</artifactId>
-    <version>2.0.1-SNAPSHOT</version>
+    <artifactId>puma-instance-core</artifactId>
     <name>puma-instance-core</name>
     <packaging>jar</packaging>
 
