--- a/test/pom.xml
+++ b/test/pom.xml
@@ -6,31 +6,19 @@
         <groupId>com.dianping.puma</groupId>
         <artifactId>puma-parent</artifactId>
         <version>2.0.1-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>puma-manage</artifactId>
-    <version>2.0.1-SNAPSHOT</version>
-    <name>puma-manage-reactor</name>
+    <artifactId>puma-test</artifactId>
+    <name>puma-test</name>
     <packaging>jar</packaging>
 
     <dependencies>
 
-        <!-- puma -->
         <dependency>
             <groupId>com.dianping.puma</groupId>
-            <artifactId>puma-common</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.dianping.puma</groupId>
-            <artifactId>puma-instance</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.dianping.puma</groupId>
-            <artifactId>puma-manage-core</artifactId>
+            <artifactId>puma-manage-monitor</artifactId>
+            <version>${project.version}</version>
         </dependency>
 
         <!-- log-->
@@ -61,4 +49,5 @@
         </dependency>
 
     </dependencies>
+
 </project>
