--- a/manage/monitor/pom.xml
+++ b/manage/monitor/pom.xml
@@ -20,11 +20,13 @@
         <dependency>
             <groupId>com.dianping.puma</groupId>
             <artifactId>puma-common</artifactId>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.dianping.puma</groupId>
-            <artifactId>puma-instance</artifactId>
+            <artifactId>puma-instance-core</artifactId>
+            <version>${project.version}</version>
         </dependency>
 
         <!-- log-->
