--- a/instance/pom.xml
+++ b/instance/pom.xml
@@ -9,8 +9,7 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>puma-manage</artifactId>
-    <version>2.0.1-SNAPSHOT</version>
+    <artifactId>puma-instance</artifactId>
     <name>puma-instance</name>
     <packaging>pom</packaging>
 
