--- a/test/pom.xml
+++ b/test/pom.xml
@@ -17,7 +17,7 @@
 
         <dependency>
             <groupId>com.dianping.puma</groupId>
-            <artifactId>puma-manage-monitor</artifactId>
+            <artifactId>puma-server</artifactId>
             <version>${project.version}</version>
         </dependency>
 
