--- a/manage/record/pom.xml
+++ b/manage/record/pom.xml
@@ -23,6 +23,12 @@
             <version>${project.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.dianping.puma</groupId>
+            <artifactId>puma-instance-core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <!-- log-->
         <dependency>
             <groupId>log4j</groupId>
