--- a/manage/monitor/pom.xml
+++ b/manage/monitor/pom.xml
@@ -25,7 +25,7 @@
 
         <dependency>
             <groupId>com.dianping.puma</groupId>
-            <artifactId>puma-instance-core</artifactId>
+            <artifactId>puma-manage-core</artifactId>
             <version>${project.version}</version>
         </dependency>
 
