--- a/pom.xml
+++ b/pom.xml
@@ -301,6 +301,12 @@
                 <version>2.7.1</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.16.6</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
     <build>
