move puma replicate module into puma node module

--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
         <module>server</module>
         <module>common</module>
         <module>manage</module>
+        <module>node</module>
         <module>instance</module>
-        <module>replicate</module>
         <module>filter</module>
         <module>test</module>
     </modules>
