move puma filter module into puma node module

--- a/node/pom.xml
+++ b/node/pom.xml
@@ -14,7 +14,8 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>parse</module>
         <module>replicate</module>
+        <module>parse</module>
+        <module>filter</module>
     </modules>
 </project>
